Devlog + pin line: the fork's CI failure on the ADR-0117 push was TestNG class-order pollution of DeckRecognizerTest (StaticData.instance() vs the mocked getMagicDb()); fixed test-only in CardMockTestCase (fork cd4b9d9951, CI green)
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>